--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./dist/output.css" />
     <link
       rel="stylesheet"
@@ -11,8 +13,8 @@
     />
   </head>
   <body>
-    <header>
-      <section class="max-w-screen-2xl m-auto grid grid-cols-3 gap-8">
+    <header class="fixed w-full z-50">
+      <section class="max-w-screen-2xl m-auto grid grid-cols-3 gap-8 bg-white">
         <div>
           <a class="flex m-auto" href="">
             <div class="overflow-hidden w-[126px] h-auto">
@@ -90,8 +92,40 @@
         </ul>
       </nav>
     </header>
-    <main>
-
+    <main class="max-w-screen-2xl m-auto pt-[130px]">
+      <section class="w-full mb-16">
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/banner01.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Siêu thị bếp Thanh Hiền</h5>
+                <p>Đại tiệc ưu đãi tháng 6 ngày từ 29-30 tháng 6</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/banner02.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Siêu thị bếp Thanh Hiền</h5>
+                <p>Đại tiệc ưu đãi tháng 6 ngày từ 29-30 tháng 6</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
     </main>
     <footer class="max-w-screen-2xl m-auto bg-red-700 mt-16 ">
       <section class="text-white grid grid-cols-3 px-[50px]">
@@ -140,5 +174,6 @@
         <p class="text-center text-white py-2 text-base">Siêu thị bếp Thanh Hiền số 659 Trường Chinh, thành phố Nam Định cảm ơn bạn đã ghé qua Shop</p>
       </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
