update news shop contact

--- a/index.html
+++ b/index.html
@@ -103,32 +103,17 @@
             ></a>
           </li>
           <li>
-            <a class="text-xl font-semibold hover:underline p-2" href=""
+            <a class="text-xl font-semibold hover:underline p-2" href="/shop.html"
               >BẾP TỪ</a
             >
           </li>
           <li>
-            <a class="text-xl font-semibold hover:underline p-2" href=""
-              >BẾP TỪ</a
-            >
-          </li>
-          <li>
-            <a class="text-xl font-semibold hover:underline p-2" href=""
-              >BẾP TỪ</a
-            >
-          </li>
-          <li>
-            <a class="text-xl font-semibold hover:underline p-2" href=""
-              >BẾP TỪ</a
-            >
-          </li>
-          <li>
-            <a class="text-xl font-semibold hover:underline p-2" href=""
+            <a class="text-xl font-semibold hover:underline p-2" href="/news.html"
               >TIN TỨC</a
             >
           </li>
           <li>
-            <a class="text-xl font-semibold hover:underline p-2" href=""
+            <a class="text-xl font-semibold hover:underline p-2" href="/news.html"
               >KHUYẾN MÃI</a
             >
           </li>
@@ -140,7 +125,7 @@
         </ul>
       </nav>
     </header>
-    <main class="max-w-screen-2xl m-auto pt-[130px]">
+    <main class="max-w-screen-2xl m-auto pt-[130px] ">
       <section class="w-full mb-16">
         <div id="carouselExampleCaptions" class="carousel slide">
           <div class="carousel-indicators">
@@ -324,7 +309,7 @@
           />
         </div>
       </section>
-      <section class="max-w-screen-xl m-auto pb-16">
+      <section class="max-w-screen-xl m-auto pb-16 mb-8 ">
         <div class="flex justify-between">
           <h1 class="text-[30px] font-bold text-red-800">Sản phẩm bán chạy</h1>
           <a
@@ -333,7 +318,7 @@
             >View all</a
           >
         </div>
-        <div class="grid grid-cols-5 gap-8 mt-8">
+        <div class="grid grid-cols-4 gap-8 mt-8">
           <div class="w-full">
             <a href="">
               <div class="overflow-hidden">
@@ -361,6 +346,99 @@
               >
             </div>
           </div>
+          <div class="w-full">
+            <a href="">
+              <div class="overflow-hidden">
+                <img
+                  class="w-full hover:scale-125 duration-1000"
+                  src="https://hn.ss.bfcplatform.vn/tckt/2022/02/22A02011-01.jpg"
+                  alt=""
+                />
+              </div>
+            </a>
+            <div
+              class="grid grid-cols-1 p-2 border-r-4 border-b-4 border-gray-300"
+            >
+              <h3 class="text-xl font-bold text-red-600 my-3">
+                Product One(-20%)
+              </h3>
+              <div class="flex gap-1 text-base">
+                <p class="font-semibold text-red-500">5000000 VNĐ</p>
+                <p class="text-gray-400 line-through">4500000 VNĐ</p>
+              </div>
+              <a
+                href=""
+                class="w-full text-center my-2 py-1 text-base bg-red-500 hover:bg-red-600 text-white"
+                >Mua ngay</a
+              >
+            </div>
+          </div>
+          <div class="w-full">
+            <a href="">
+              <div class="overflow-hidden">
+                <img
+                  class="w-full hover:scale-125 duration-1000"
+                  src="https://hn.ss.bfcplatform.vn/tckt/2022/02/22A02011-01.jpg"
+                  alt=""
+                />
+              </div>
+            </a>
+            <div
+              class="grid grid-cols-1 p-2 border-r-4 border-b-4 border-gray-300"
+            >
+              <h3 class="text-xl font-bold text-red-600 my-3">
+                Product One(-20%)
+              </h3>
+              <div class="flex gap-1 text-base">
+                <p class="font-semibold text-red-500">5000000 VNĐ</p>
+                <p class="text-gray-400 line-through">4500000 VNĐ</p>
+              </div>
+              <a
+                href=""
+                class="w-full text-center my-2 py-1 text-base bg-red-500 hover:bg-red-600 text-white"
+                >Mua ngay</a
+              >
+            </div>
+          </div>
+          <div class="w-full">
+            <a href="">
+              <div class="overflow-hidden">
+                <img
+                  class="w-full hover:scale-125 duration-1000"
+                  src="https://hn.ss.bfcplatform.vn/tckt/2022/02/22A02011-01.jpg"
+                  alt=""
+                />
+              </div>
+            </a>
+            <div
+              class="grid grid-cols-1 p-2 border-r-4 border-b-4 border-gray-300"
+            >
+              <h3 class="text-xl font-bold text-red-600 my-3">
+                Product One(-20%)
+              </h3>
+              <div class="flex gap-1 text-base">
+                <p class="font-semibold text-red-500">5000000 VNĐ</p>
+                <p class="text-gray-400 line-through">4500000 VNĐ</p>
+              </div>
+              <a
+                href=""
+                class="w-full text-center my-2 py-1 text-base bg-red-500 hover:bg-red-600 text-white"
+                >Mua ngay</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="max-w-screen-xl m-auto pb-16">
+        <div class="flex justify-between">
+          <h1 class="text-[30px] font-bold text-red-800">Sản phẩm mới nhập</h1>
+          <a
+            href=""
+            class="border border-red-500 px-3 py-2 text-red-600 text-xl font-semibold hover:text-white hover:bg-red-600"
+            >View all</a
+          >
+        </div>
+        <div class="grid grid-cols-4 gap-8 mt-8">
           <div class="w-full">
             <a href="">
               <div class="overflow-hidden">
